<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/login_bg"
        android:padding="@dimen/login_padding">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/signinLayout"
            android:visibility="visible">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="@dimen/signin_topbar_height"
                android:id="@+id/signinTopLayout">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/login"
                    android:id="@+id/textView"
                    android:layout_weight="1"
                    android:textColor="@color/white_gray"
                    android:gravity="center"
                    android:textSize="@dimen/login_title_size" />

                <ImageButton
                    android:layout_width="@dimen/closebutton_size"
                    android:layout_height="match_parent"
                    android:id="@+id/skipSigninButton"
                    android:background="@drawable/close_btn" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"></LinearLayout>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/input_height"
                android:id="@+id/userNameEditText"
                android:background="@drawable/input_active"
                android:editable="true"
                android:hint="@string/username_placefolder"
                android:textColorHint="@color/white_gray" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/input_height"
                android:id="@+id/passwordEditText"
                android:background="@drawable/input_inactive"
                android:editable="true"
                android:hint="@string/password_placefolder"
                android:textColorHint="@color/white_gray"
                android:layout_marginTop="@dimen/input_gap" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:id="@+id/textView3"
                    android:layout_weight="1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/forgot_password"
                    android:id="@+id/textView2"
                    android:textColor="@color/white_gray" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/tap_here"
                    android:id="@+id/tapTextView"
                    android:textColor="@color/white_blue"
                    android:gravity="center" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:id="@+id/textView4"
                    android:layout_weight="1" />

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="@dimen/closebutton_size"
                android:layout_height="@dimen/closebutton_size"
                android:background="@drawable/or"
                android:layout_gravity="center">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/or"
                    android:id="@+id/textView5"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textColor="@color/white_gray" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="@dimen/input_height"
                android:background="@drawable/facebook_btn"
                android:padding="@dimen/login_padding">

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/facebookButton"
                    android:background="@drawable/fb_icon"
                    android:layout_gravity="center" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/signin_facebook"
                    android:id="@+id/facebookTextView"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textColor="@color/white_gray"
                    android:layout_gravity="center" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="@dimen/input_height"
                android:background="@drawable/google_btn"
                android:padding="@dimen/login_padding"
                android:layout_marginTop="@dimen/input_gap">

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageButton"
                    android:background="@drawable/g_icon"
                    android:layout_gravity="center" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/signin_google"
                    android:id="@+id/googleTextView"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textColor="@color/white_gray"
                    android:layout_gravity="center" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="5" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:id="@+id/textView6"
                    android:layout_weight="1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/already_signed"
                    android:id="@+id/textView7"
                    android:textColor="@color/white_gray" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/signup"
                    android:id="@+id/signupTextView"
                    android:textColor="@color/white_blue"
                    android:gravity="center"
                    android:singleLine="false" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:id="@+id/textView9"
                    android:layout_weight="1" />

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusableInTouchMode="false"
            android:id="@+id/welcomeLayout"
            android:visibility="gone">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="@dimen/signin_topbar_height">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:id="@+id/textView8"
                    android:layout_weight="1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:id="@+id/switchTextView"
                    android:layout_gravity="center"
                    android:textColor="@color/white_gray"
                    android:text="@string/switch_account" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"></LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="@dimen/rocket__width"
                    android:layout_height="@dimen/rocket_height"
                    android:background="@drawable/rocket"
                    android:id="@+id/rocketLayout"
                    android:layout_gravity="center"></LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:layout_marginTop="@dimen/welcome_back_top_space">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/welcome_back"
                    android:id="@+id/textView10"
                    android:layout_gravity="center"
                    android:textSize="@dimen/welcome_back_size"
                    android:textStyle="bold"
                    android:textColor="@color/white_gray" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_bottom_height"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/sign_in"
        android:id="@+id/signinButtonView"
        android:gravity="center"
        android:background="@color/white_blue"
        android:textColor="@color/white_gray" />

</LinearLayout>
